crates/plotnik-lib/tests/04-emit/linking/negated_field_not_on_node_with_suggestion.txt
Q = (function_declaration -parameter) @fn
==== diagnostics ====
error: field `parameter` is not valid on this node kind
 --> query.ptk:1:28
  |
1 | Q = (function_declaration -parameter) @fn
  |      --------------------  ^^^^^^^^^
  |      |
  |      on `function_declaration`
  |
help: did you mean `parameters`?
  |
1 | Q = (function_declaration -parameters) @fn
  |                                     +
help: valid fields for `function_declaration`: `body`, `name`, `parameters`
